--- a/src/styles.css
+++ b/src/styles.css
@@ -34,3 +34,22 @@
   overflow: hidden !important;
   text-overflow: ellipsis;
 }
+
+
+
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
+.jumbotron{
+    padding-top: 0px;
+    background: #fff;
+}
+
+.form-control,.input-group-text{
+    border:1px solid #0080ff;
+}
+
+table.table-hover tbody tr:hover{
+cursor: pointer;
+}
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
